[package]
name = "stripe-payment-handler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.97"
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time"]}
serde={version = "1", features = ["derive"]}
anyhow = "1.0.75"
flowsnet-platform-sdk ="0.1.3"
log = "0.4.14"
webhook-flows = "0.4.4"
mysql_async_wasi = "0.31"
# mysql_async_wasi = { version = "0.33", features = [ "default-rustls" ] }
